# ctiled

./: .gitignore  CMAkeLists.txt  CMakeLists.txt  README.md  build-clean.sh  run-clean.sh
product/: config.yaml  ctiled
product/res/: test.level
product/res/shader/: base.frag  base.vert  text.frag  text.vert  ui.frag  ui.vert
product/res/texture/: wip.aseprite
src/: common.h  main.c
src/engine/: engine.c  engine.h  font.c  font.h  init.c  init.h  input.c  input.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/game/: scene.c  scene.h
src/game/scene/: game.c  game.h  menu.c  menu.h
src/game/ui/: button.c  button.h  input.c  input.h  label.c  label.h  panel.c  panel.h  ui.c  ui.h
src/parser/: parser.c  parser.h
src/util/: common.h  list.h  map.c  util.h
